--- a/Views/Azienda/ElencoLavoratori.cshtml
+++ b/Views/Azienda/ElencoLavoratori.cshtml
@@ -61,7 +61,7 @@
                 <i class="fa-solid fa-pen-to-square" data-target="employee-valutazione"
                     onclick="rendiModificabile(this)"></i>
             </div>
-            <button type="submit" class="submit-btn">Cerca</button>
+            <button type="submit" class="submit-btn">Salva</button>
         </form>
     </div>
 </div>
