fix errore richiesta assenza e fix css modale lato dipendnete

--- a/Views/Azienda/CalendarioLavoratori.cshtml
+++ b/Views/Azienda/CalendarioLavoratori.cshtml
@@ -185,8 +185,8 @@
     }
     else
     {
-        <div>
-            dipendente non trovato
+        <div class="dipnontrovato">
+            Dipendente non trovato
         </div>
     }
 }
