--- a/Views/Dipendente/RichiesteAssenza.cshtml
+++ b/Views/Dipendente/RichiesteAssenza.cshtml
@@ -46,7 +46,7 @@
                             }
                             else
                             {
-                                <span class="esito-postivio"> Richiesta rifiutata</span>
+                                <span class="esito-negativo"> Richiesta rifiutata</span>
                             }
                         </li>
                     }
