--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -45,3 +45,16 @@
 
     color: #fff; 
 }
+.azienda {
+     background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(91, 202, 221);
+    color: rgb(255, 255, 255);
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    width: 50%; /* Imposta la larghezza al 50% */
+    margin: auto; /* Per centrare l'elemento orizzontalmente */
+
+}
