aggiornamento calendario lavoratori e css

--- a/Views/Azienda/CalendarioLavoratori.cshtml
+++ b/Views/Azienda/CalendarioLavoratori.cshtml
@@ -168,7 +168,7 @@ else
 {
     
        
-    <div class="benvenuto">
+    <div class="azienda">
         Benvenuto nella sezione calendario
     </div>
 }
