aggiornamento calendario lavoratori, elenco lavoratori, gestione assenze e css di tutti e tre

--- a/Views/Azienda/CalendarioLavoratori.cshtml
+++ b/Views/Azienda/CalendarioLavoratori.cshtml
@@ -192,8 +192,8 @@
 }
 else
 {
-    <div>
-        benvenuto nella sezione calendario
+    <div class="benvenuto">
+        Benvenuto nella sezione calendario
     </div>
 }
 
